k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cavalocal-ingress
  namespace: default
  annotations:
    # Soporte para Server-Sent Events (SSE) — timeouts largos, sin buffering
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: conjunta3p.espe.edu.ec
      http:
        paths:
          # Ruta para la API REST y SSE del Microservicio de Auditoría
          - path: /api/audit
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 3002

          # Ruta para el Backend Principal CavaLocal
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001

          # Ruta para el Dashboard SSE Web
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80

          # Ruta principal (Landing Frontend Web)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
